feat(phase-3): add verified semantic actions